<resources>
    <string name="app_name">Poople Map</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="account_circle_icon">Account circle icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="log_out">Log out</string>
    <string name="about_us">About us</string>
    <string name="send_us_a_message">Send us a message</string>
    <string name="chosen_language">Chosen Language</string>
    <string name="english">English</string>
    <string name="french">Français</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="email">Email</string>
    <string name="update_profile">Update Profile</string>
    <string name="search">Search\n</string>
    <string name="add_location">Add location</string>
</resources>