<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Header for Profile Fragment -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/edit_profile"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <!-- Profile Page -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40sp"
                    android:src="@drawable/icon_account_circle" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="32dp"
                    android:paddingVertical="20dp">

                    <EditText
                        android:id="@+id/edit_username_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:background="@drawable/rounded_corner_10"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorTextWhite"
                        android:textSize="20sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/email"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorTextWhite"
                        android:id="@+id/edit_email_input"
                        android:textSize="20sp"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/rounded_corner_10"
                        android:padding="12dp"
                        android:autofillHints="" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/update_profile_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:background="@drawable/rounded_corner_100"
                        android:backgroundTint="@color/colorSecondary"
                        android:text="@string/update_profile"
                        />

                </LinearLayout>



            </LinearLayout>


        </ScrollView>
    </LinearLayout>


</FrameLayout>