<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Header for Profile Fragment -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:layout_centerInParent="true"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:textSize="18sp"
                />
        </RelativeLayout>

        <!-- Profile Page -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Profile Information + Edit Profile Button -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/icon_account_circle"/>
                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorText"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:text="John Doe" />
                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="12sp"
                    android:text="johndoe@gmail.com" />
                
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/edit_profile_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:background="@drawable/rounded_corner_100"
                    android:backgroundTint="@color/colorSecondary"
                    android:text="@string/edit_profile"
                    />

                <!-- Settings -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="40dp"
                    android:padding="8dp"
                    android:background="@drawable/rounded_corner_10"
                    android:backgroundTint="@color/colorPrimaryDark">

                    <!-- Notification Settings -->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/notification"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="10dp"
                            android:padding="4dp"
                            android:src="@drawable/icon_notification"
                            android:background="@drawable/rounded_corner_100"
                            android:backgroundTint="@color/notificationColor"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_toEndOf="@+id/notification"
                            android:text="@string/notifications"
                            android:textColor="@color/colorTextWhite"
                            android:textStyle="bold"
                            android:layout_centerVertical="true"/>

                        <TextView
                            android:id="@+id/notfication_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_toStartOf="@+id/notification_switch"
                            android:text="@string/off"
                            android:textColor="@color/colorText"
                            android:textStyle="bold"
                            android:layout_centerVertical="true"/>

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/notification_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:padding="12dp"
                            android:switchMinWidth="50dp"/>

                    </RelativeLayout>

                    <!-- Language Settings -->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/language"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="10dp"
                            android:padding="5dp"
                            android:src="@drawable/icon_language"
                            android:background="@drawable/rounded_corner_100"
                            android:backgroundTint="@color/languageColor"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_toEndOf="@+id/language"
                            android:text="@string/language"
                            android:textColor="@color/colorTextWhite"
                            android:textStyle="bold"
                            android:layout_centerVertical="true"/>

                        <TextView
                            android:id="@+id/chosen_language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_toStartOf="@+id/language_switch"
                            android:text="@string/french"
                            android:textColor="@color/colorText"
                            android:textStyle="bold"
                            android:layout_centerVertical="true"/>
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/language_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:padding="12dp"
                            android:switchMinWidth="50dp"/>

                    </RelativeLayout>



                </LinearLayout>

                <!-- Contact -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="40dp"
                    android:padding="8dp"
                    android:background="@drawable/rounded_corner_10"
                    android:backgroundTint="@color/colorPrimaryDark">

                    <!-- About Us -->
                    <RelativeLayout
                        android:id="@+id/about_us_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/about_us"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="6dp"
                            android:padding="4dp"
                            android:src="@drawable/icon_info"
                            android:background="@drawable/rounded_corner_100"
                            android:backgroundTint="@color/aboutUsColor"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_toEndOf="@+id/about_us"
                            android:text="@string/about_us"
                            android:textColor="@color/colorTextWhite"
                            android:textStyle="bold"
                            android:layout_centerVertical="true"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/right_arrow_icon"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:minHeight="40dp"/>
                    </RelativeLayout>

                    <!-- Send Us a message -->
                    <RelativeLayout
                        android:id="@+id/contact_us_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/contact_us"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="6dp"
                            android:padding="4dp"
                            android:src="@drawable/icon_message"
                            android:background="@drawable/rounded_corner_100"
                            android:backgroundTint="@color/sendUsColor"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_toEndOf="@+id/contact_us"
                            android:text="@string/send_us_a_message"
                            android:textColor="@color/colorTextWhite"
                            android:textStyle="bold"
                            android:layout_centerVertical="true"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/right_arrow_icon"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:minHeight="40dp"/>
                    </RelativeLayout>



                </LinearLayout>

                <!-- Log Out -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="40dp"
                    android:padding="8dp"
                    android:background="@drawable/rounded_corner_10"
                    android:backgroundTint="@color/colorPrimaryDark">

                    <RelativeLayout
                        android:id="@+id/log_out_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/log_out"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="6dp"
                            android:padding="4dp"
                            android:src="@drawable/icon_logout"
                            android:background="@drawable/rounded_corner_100"
                            android:backgroundTint="@color/logoutColor"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_toEndOf="@+id/log_out"
                            android:text="@string/log_out"
                            android:textColor="@color/colorTextWhite"
                            android:textStyle="bold"
                            android:layout_centerVertical="true"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/right_arrow_icon"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:minHeight="40dp"/>
                    </RelativeLayout>



                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</FrameLayout>